c++ 백준 2557, 10813 문제 풀이

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(Algorithm_cpp)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Algorithm_cpp main.cpp)
+add_executable(Algorithm_cpp main.cpp
+        baekjoon/2557.cpp
+        baekjoon/2557.h
+        baekjoon/b10813.cpp
+        baekjoon/b10813.h
+)
